--- a/task/MainWindow.xaml
+++ b/task/MainWindow.xaml
@@ -5,8 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:task"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="No name - Notepad" Height="450" Width="800">
+    <Window.CommandBindings>
+        <CommandBinding Command="New" CanExecute="NewCommand_CanExecute" Executed="NewCommand_Executed"/>
+    </Window.CommandBindings>
+
     <Grid>
+        <DockPanel>
+            <Menu DockPanel.Dock="Top">
+                <MenuItem Header="File">
+                    <MenuItem Header="New" Command="New" />
+                    <MenuItem Header="New window"/>
+                    <MenuItem Header="Open" />
+                    <MenuItem Header="Save" />
+                    <MenuItem Header="Save as" />
+                    <Separator />
+                    <MenuItem Header="Page setup" />
+                    <MenuItem Header="Print" />
+                    <Separator />
+                    <MenuItem Header="Exit" />
+                </MenuItem>
+                <MenuItem Header="_Tools">
+                    <MenuItem Header="_Manage users">
+                        <MenuItem.Icon>
+                            <Image Source="/WpfTutorialSamples;component/Images/user.png" />
+                        </MenuItem.Icon>
+                    </MenuItem>
+                    <MenuItem Header="_Show groups" IsCheckable="True" IsChecked="True" />
+                </MenuItem>
+            </Menu>
+            <TextBox AcceptsReturn="True" Name="TxtEditor" />
+        </DockPanel>
 
     </Grid>
 </Window>
