--- a/task/App.xaml
+++ b/task/App.xaml
@@ -5,11 +5,25 @@
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
-            <SolidColorBrush x:Key="HeaderFooter" Color="#FF1A1A1A" />
-            <SolidColorBrush x:Key="Body" Color="#FF222222" />
+            <!--цвет фона заголовка-->
+            <SolidColorBrush x:Key="HeaderBackgroundColor" Color="#202020" />
+            <!--цвет текста заголовка-->
+            <SolidColorBrush x:Key="HeaderTextColor" Color="#bfbfbf" />
 
-            <SolidColorBrush x:Key="HeaderFooterText" Color="#FFEAEAEA" />
-            <SolidColorBrush x:Key="BodyText" Color="#FFB7B7B7"  />
+            <!--цвет текста меню-->
+            <SolidColorBrush x:Key="MenuTextColor" Color="#bfbfbf" />
+            <!--цвет фона меню-->
+            <SolidColorBrush x:Key="MenuBackgroundColor" Color="#202020" />
+
+            <!--цвет фона тела-->
+            <SolidColorBrush x:Key="BodyBackgroundColor" Color="#272727" />
+            <!--цвет текста тела-->
+            <SolidColorBrush x:Key="BodyTextColor" Color="#ffffff" />
+
+            <!--цвет фона нижнего колонтитула-->
+            <SolidColorBrush x:Key="FooterBackgroundColor" Color="#202020" />
+            <!--цвет текста нижнего колонтитула-->
+            <SolidColorBrush x:Key="FooterTextColor" Color="#bfbfbf" />
         </ResourceDictionary>
 
     </Application.Resources>
