--- a/task/MainWindow.xaml
+++ b/task/MainWindow.xaml
@@ -3,7 +3,6 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:task"
         mc:Ignorable="d"
         Title="Untitled - Notepad" Height="720" Width="1024">
 
@@ -18,70 +17,116 @@
     <Grid>
         <Grid.RowDefinitions>
             <!--Header-->
-            <RowDefinition Height="40"/>
+            <RowDefinition Height="40" />
             <!--Body-->
             <RowDefinition />
             <!--Footer-->
-            <RowDefinition Height="30"/>
+            <RowDefinition Height="30" />
         </Grid.RowDefinitions>
         <!--Header-->
         <Rectangle Fill="{StaticResource HeaderBackgroundColor}" />
         <!--Menu-->
-        <Menu Grid.Row="0" Background="Transparent" VerticalContentAlignment="Center" VerticalAlignment="Center" Foreground="{StaticResource HeaderFooterText}">
+        <Menu Grid.Row="0" Background="Transparent" VerticalContentAlignment="Center" VerticalAlignment="Center"
+              Foreground="{StaticResource HeaderTextColor}">
             <MenuItem Header="File" VerticalAlignment="Center" Background="{StaticResource HeaderBackgroundColor}">
-                <MenuItem x:Name="NewDocument_MenuItem" Header="New" InputGestureText="CTRL+N" Click="NewDocument_MenuItem_Click" />
-                <MenuItem x:Name="NewWindow_MenuItem" Header="New Window" InputGestureText="CTRL+Shift+N" Click="NewWindow_MenuItem_Click" />
-                <MenuItem Header="Open" x:Name="Open_MenuItem" InputGestureText="CTRL+O" Click="Open_MenuItem_Click" />
-                <MenuItem x:Name="Save_MenuItem" Header="Save" InputGestureText="CTRL+S" Click="Save_MenuItem_Click" />
-                <MenuItem x:Name="SaveAs_MenuItem" Header="Save As" InputGestureText="CTRL+Shift+S" Click="SaveAs_MenuItem_Click" />
+                <MenuItem x:Name="NewDocumentMenuItem" Header="New" InputGestureText="CTRL+N"
+                          Click="NewDocument_MenuItem_Click" Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem x:Name="NewWindowMenuItem" Header="New Window" InputGestureText="CTRL+Shift+N"
+                          Click="NewWindow_MenuItem_Click" Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem x:Name="OpenMenuItem" Header="Open" InputGestureText="CTRL+O" Click="Open_MenuItem_Click"
+                          Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem x:Name="SaveMenuItem" Header="Save" InputGestureText="CTRL+S" Click="Save_MenuItem_Click"
+                          Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem x:Name="SaveAsMenuItem" Header="Save As" InputGestureText="CTRL+Shift+S"
+                          Click="SaveAs_MenuItem_Click" Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
                 <Separator />
-                <MenuItem x:Name="PageSetup_MenuItem" Header="Page Setup" Click="PageSetup_MenuItem_Click" />
-                <MenuItem Header="Print" InputGestureText="CTRL+P" />
-                <MenuItem x:Name="Exit_MenuItem" Header="Exit" Click="Exit_MenuItem_Click" />
+                <MenuItem x:Name="PageSetupMenuItem" Header="Page Setup" Click="PageSetup_MenuItem_Click"
+                          Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem Header="Print" InputGestureText="CTRL+P" Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem x:Name="ExitMenuItem" Header="Exit" Click="Exit_MenuItem_Click"
+                          Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
             </MenuItem>
             <MenuItem Header="Edit">
-                <MenuItem x:Name="Undo_MenuItem" Header="Undo" InputGestureText="CTRL+Z" Click="Undo_MenuItem_Click" />
+                <MenuItem x:Name="UndoMenuItem" Header="Undo" InputGestureText="CTRL+Z" Click="Undo_MenuItem_Click"
+                          Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
                 <Separator />
-                <MenuItem x:Name="Cut_MenuItem" Header="Cut" InputGestureText="CTRL+X" Click="Cut_MenuItem_Click" />
-                <MenuItem x:Name="Copy_MenuItem" Header="Copy" InputGestureText="CTRL+C" Click="Copy_MenuItem_Click" />
-                <MenuItem x:Name="Paste_MenuItem" Header="Paste" InputGestureText="CTRL+V" Click="Paste_MenuItem_Click"/>
-                <MenuItem x:Name="Delete_MenuItem" Header="Delete" InputGestureText="Del" Click="Delete_MenuItem_Click" />
+                <MenuItem x:Name="CutMenuItem" Header="Cut" InputGestureText="CTRL+X" Click="Cut_MenuItem_Click"
+                          Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem x:Name="CopyMenuItem" Header="Copy" InputGestureText="CTRL+C" Click="Copy_MenuItem_Click"
+                          Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem x:Name="PasteMenuItem" Header="Paste" InputGestureText="CTRL+V" Click="Paste_MenuItem_Click"
+                          Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem x:Name="DeleteMenuItem" Header="Delete" InputGestureText="Del" Click="Delete_MenuItem_Click"
+                          Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
                 <Separator />
-                <MenuItem Header="Find" InputGestureText="CTRL+F"/>
-                <MenuItem Header="Find Next" InputGestureText="F3" />
-                <MenuItem Header="Find Previous" InputGestureText="Shift+F3" />
-                <MenuItem x:Name="Replace_MenuItem" Header="Replace" InputGestureText="CTRL+H" Click="Replace_MenuItem_Click" />
-                <MenuItem Header="Go to" InputGestureText="CTRL+G" />
+                <MenuItem Header="Find" InputGestureText="CTRL+F" Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem Header="Find Next" InputGestureText="F3" Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem Header="Find Previous" InputGestureText="Shift+F3"
+                          Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem Header="Replace" x:Name="ReplaceMenuItem" InputGestureText="CTRL+H"
+                          Click="Replace_MenuItem_Click" Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem Header="Go to" InputGestureText="CTRL+G" Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
                 <Separator />
-                <MenuItem x:Name="SelectAll_MenuItem" Header="Select all" InputGestureText="CTRL+A" Click="SelectAll_MenuItem_Click" />
-                <MenuItem x:Name="TimeDate_MenuItem" Header="Time/Date" InputGestureText="F5" Click="TimeDate_MenuItem_Click" />
+                <MenuItem x:Name="SelectAllMenuItem" Header="Select all" InputGestureText="CTRL+A"
+                          Click="SelectAll_MenuItem_Click" Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem x:Name="TimeDateMenuItem" Header="Time/Date" InputGestureText="F5"
+                          Click="TimeDate_MenuItem_Click" Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
                 <Separator />
                 <MenuItem Header="Font" InputGestureText="CTRL+0" />
             </MenuItem>
             <MenuItem Header="View">
                 <MenuItem Header="Zoom">
-                    <MenuItem x:Name="ZoomIn_MenuItem" Header="Zoom in"  InputGestureText="CTRL+Plus" Click="ZoomIn_MenuItem_Click"/>
-                    <MenuItem x:Name="ZoomOut_MenuItem" Header="Zoom out" InputGestureText="CTRL+Minus" Click="ZoomOut_MenuItem_Click" />
-                    <MenuItem x:Name="ZoomRestore_MenuItem" Header="Restore default zoom" InputGestureText="CTRL+0" Click="ZoomRestore_MenuItem_Click"/>
+                    <MenuItem x:Name="ZoomInMenuItem" Header="Zoom in" InputGestureText="CTRL+Plus"
+                              Click="ZoomIn_MenuItem_Click" Background="{StaticResource HeaderBackgroundColor}"
+                              Foreground="{StaticResource HeaderTextColor}" />
+                    <MenuItem x:Name="ZoomOutMenuItem" Header="Zoom out" InputGestureText="CTRL+Minus"
+                              Click="ZoomOut_MenuItem_Click" Background="{StaticResource HeaderBackgroundColor}"
+                              Foreground="{StaticResource HeaderTextColor}" />
+                    <MenuItem x:Name="ZoomRestoreMenuItem" Header="Restore default zoom" InputGestureText="CTRL+0"
+                              Click="ZoomRestore_MenuItem_Click" Background="{StaticResource HeaderBackgroundColor}"
+                              Foreground="{StaticResource HeaderTextColor}" />
                 </MenuItem>
                 <Separator />
-                <MenuItem x:Name="ShowStatusBar_MenuItem" Header="Status" IsCheckable="True" IsChecked="True" Click="ShowStatusBar_MenuItem_Click" />
-                <MenuItem x:Name="WordWrap_MenuItem" Header="Word Wrap" IsCheckable="True" IsChecked="True" Click="WordWrap_MenuItem_Click" />
+                <MenuItem x:Name="ShowStatusBarMenuItem" Header="Status" IsCheckable="True" IsChecked="True"
+                          Click="ShowStatusBar_MenuItem_Click" Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
+                <MenuItem x:Name="WordWrapMenuItem" Header="Word Wrap" IsCheckable="True" IsChecked="True"
+                          Click="WordWrap_MenuItem_Click" Background="{StaticResource HeaderBackgroundColor}"
+                          Foreground="{StaticResource HeaderTextColor}" />
             </MenuItem>
         </Menu>
 
         <!--Body-->
-        <Rectangle Fill="{StaticResource Body}" Grid.Row="1" />
+        <Rectangle Fill="{StaticResource BodyBackgroundColor}" Grid.Row="1" />
         <TextBox x:Name="TextArea"
                  Grid.Row="1"
                  Background="Transparent"
                  BorderThickness="0" Padding="20" FontSize="16"
-        FontFamily="Lucida Console"
-                 Foreground="{StaticResource BodyText}" CaretBrush="White"
-        AcceptsReturn="True"
+                 FontFamily="Lucida Console"
+                 Foreground="{StaticResource BodyTextColor}" CaretBrush="White"
+                 AcceptsReturn="True"
                  TextWrapping="Wrap" TextChanged="TextArea_TextChanged"
-                 VerticalScrollBarVisibility="Auto">
-        </TextBox>
+                 VerticalScrollBarVisibility="Auto" />
         <!--Footer-->
         <Rectangle Fill="{StaticResource HeaderBackgroundColor}" Grid.Row="2" />
         <Grid x:Name="StatusBar" Grid.Row="2">
@@ -109,8 +154,6 @@
             <TextBlock Grid.Column="3" Text="UTF-8" VerticalAlignment="Center" Margin="10,0" />
             <Rectangle Width="1" Grid.Column="3" HorizontalAlignment="Left" Fill="#FF232323" Margin="0 5 " />
         </Grid>
-
-
 
 
         <!--<DockPanel>
